# wasm-components

./: .gitignore  AGENTS.md  Makefile  package-lock.json  package.json  pyrightconfig.json
ai/: issues-faced.md  requirements.md  todos.md  what-to-consider.md
ai/plans/: 1. add-bd-wasi2-func.md
hosts/python/: conftest.py  host.py  pyproject.toml  test_calc_session.py  test_eval_expression.py  test_eval_expression_detailed.py  test_generate.py  test_number_stream.py
hosts/typescript/: calc-session.test.ts  eval-expression-detailed.test.ts  eval-expression.test.ts  generate.test.ts  host.ts  number-stream.test.ts  package-lock.json  package.json  setup.ts  tsconfig.json
hosts/typescript/transpiled-go/: composed-go.core.wasm  composed-go.core2.wasm  composed-go.core3.wasm  composed-go.core4.wasm  composed-go.core5.wasm  composed-go.core7.wasm  composed-go.d.ts  composed-go.js
hosts/typescript/transpiled-go/interfaces/: docs-calculator-calculate.d.ts  docs-calculator-stream-sink.d.ts
hosts/typescript/transpiled-js/: composed-js.core3.wasm  composed-js.core8.wasm  composed-js.core9.wasm  composed-js.d.ts  composed-js.js
plugins/go/adder/: adder.wasm  docs:adder@0.1.0.wasm  go-pl:test@1.0.0.wasm  go.mod  main.go
plugins/go/calculator/: go-pl:test@1.0.0.wasm  go.mod  main.go
plugins/js/adder/: adder.js  adder.ts  tsconfig.json  wkg.toml
plugins/js/calculator/: calculator.js  calculator.ts  tsconfig.json  wit-imports.d.ts
plugins/python/adder/: app.py
plugins/python/calculator/: calculate.py  wkg.toml
wit/adder/: world.wit
wit/calculator/: world.wit
(+22 files in other folders)
