[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wasmtime>=41.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.0",
    "componentize-py>=0.21.0",
]

[tool.pyright]
typeCheckingMode = "strict"
